# FDO2RDF

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  FDO-sample.ttl  FDO2RDF.py  LICENSE  README.md  codemeta.json  pyproject.toml  somesy.toml
Sample FDOs/: sample_fdo.json
mappings/: FDO_map.sssom.tsv
outputs/: FDO-triples.ttl  sample-FDOs+network.ttl
samples/: sample-FDOs+network.json
scripts/: validate_sssom.py
src/fdo2rdf/: __init__.py  cli.py
src/fdo2rdf/mappings/: Helmholtz-KIP-mappings.tsv
src/fdo2rdf/outputs/: FDO-triples.ttl
