[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FDO2RDF"
version = "1.0.0"
description = "A tool for converting FDO metadata into RDF format."
authors = [
    {name = "Said Fathalla", email = "s.fathalla@fz-juelich.de"},
]
readme = "README.md"
keywords = [
    "FDO",
    "RDF",
    "FAIR",
    "Metadata",
    "Linked Data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "pandas>=1.0",
    "rdflib>=6.0",
    "requests>=2.25"
]
maintainers = [
    {name = "Said Fathalla", email = "s.fathalla@fz-juelich.de"},
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0", "mypy>=1.0"]

[project.scripts]
fdo2rdf = "fdo2rdf.cli:main"

[project.urls]
homepage = "https://github.com/Materials-Data-Science-and-Informatics/FDO2RDF"
repository = "https://github.com/Materials-Data-Science-and-Informatics/FDO2RDF"
documentation = "https://github.com/Materials-Data-Science-and-Informatics/FDO2RDF"

[tool.setuptools]
packages = ["fdo2rdf"]
package-dir = {"" = "src"}

[tool.poetry]
name = "fdo2rdf"
version = "0.1.0"
description = "A tool for converting FDO metadata into RDF format"
authors = ["Said Fathalla <s.fathalla@fz-juelich.de>"]
